# brave-core

android/java/: apk_for_test.flags
app/theme/: brave_theme_resources.grd
browser/: BUILD.gn
browser/ui/: BUILD.gn  brave_browser.cc
browser/ui/sidebar/: sidebar_controller.cc  sidebar_controller.h  sidebar_model.cc  sidebar_model.h  sidebar_model_data.cc  sidebar_model_data.h
browser/ui/views/frame/: brave_browser_view.cc  brave_browser_view.h
browser/ui/views/sidebar/: sidebar_button_view.cc  sidebar_button_view.h  sidebar_container_view.cc  sidebar_container_view.h  sidebar_control_view.cc  sidebar_control_view.h  sidebar_item_view.cc  sidebar_item_view.h  sidebar_items_container_view.cc  sidebar_items_container_view.h
chromium_src/chrome/browser/: about_flags.cc
chromium_src/components/content_settings/core/browser/: content_settings_default_provider.cc  content_settings_global_value_map.cc  content_settings_pref.cc  content_settings_pref_provider.cc  (+1 more)
components/brave_ads/browser/: ads_service.cc  ads_service_impl.cc
components/brave_ads/test/: BUILD.gn
components/brave_shields/browser/: BUILD.gn
components/content_settings/core/browser/: BUILD.gn  brave_content_settings_utils.cc  sources.gni
components/search_engines/: brave_prepopulated_engines.cc
components/sidebar/: sidebar_item.cc  sidebar_item.h  sidebar_service.cc  sidebar_service.h
patches/: chrome-VERSION.patch  components-content_settings-core-browser-BUILD.gn.patch  components-content_settings-core-browser-content_settings_pref_provider.cc.patch
test/: BUILD.gn
(+3 files in other folders)
