# Copyright (c) 2019 The Brave Authors. All rights reserved.
# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this file,
# You can obtain one at http://mozilla.org/MPL/2.0/.

source_set("browser_unit_tests") {
  testonly = true
  if (!is_ios) {
    sources = [
      "brave_content_settings_pref_provider_unittest.cc",
      "brave_content_settings_utils_unittest.cc",
    ]
    deps = [
      "//base",
      "//brave/common:pref_names",
      "//brave/components/brave_shields/common",
      "//chrome/test:test_support",
      "//components/content_settings/core/browser",
      "//components/content_settings/core/common",
      "//components/content_settings/core/test:test_support",
      "//content/test:test_support",
      "//services/preferences/public/cpp",
      "//testing/gtest:gtest",
      "//url",
    ]
  }
}
